cmake_minimum_required(VERSION 2.6)

# Fltk does not support 64bits on OS X yet...
#SET( CMAKE_OSX_ARCHITECTURES "i386" )

FIND_PACKAGE( FLTK REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR} ${FLTK_INCLUDE_DIR} )
#ADD_EXECUTABLE( Test Test.cpp )
#TARGET_LINK_LIBRARIES( Test cvars ${FLTK_LIBRARIES} ${OPENGL_LIBRARIES} )

ADD_EXECUTABLE( FltkCVarsDemo FltkCVarsDemo.cpp )
TARGET_LINK_LIBRARIES( FltkCVarsDemo cvars ${FLTK_LIBRARIES} ${OPENGL_LIBRARIES} )

#MESSAGE( STATUS "FLTK_LIBRARIES ${FLTK_LIBRARIES}" )
